@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2005/05/22 05:35:32 jlam Exp $
+# $NetBSD: Makefile,v 1.4 2005/06/24 05:56:25 jlam Exp $
 
 PKGNAME=		postgresql73-plperl-${BASE_VERS}
+PKGREVISION=		1
 COMMENT=		PL/Perl procedural language for the PostgreSQL backend
 
 DEPENDS+=	postgresql73-server>=${BASE_VERS}:../../databases/postgresql73-server
@@ -13,8 +14,9 @@ CONFIGURE_ARGS+=	--with-perl
 
 BUILD_DIRS=		${WRKSRC}/src/pl/plperl
 MAKEFILE=		GNUmakefile
+PERL5_REQD+=		5.8.0
 
 .include "../postgresql73-lib/buildlink3.mk"
-.include "../../lang/libperl/buildlink3.mk"
+.include "../../lang/perl5/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
