@@ -1,14 +1,0 @@
-Perl is a high-level programming language with an eclectic heritage
-written by Larry Wall and a cast of thousands.  It derives from the
-ubiquitous C programming language and to a lesser extent from sed, awk,
-the Unix shell, and at least a dozen other tools and languages.  Perl's
-process, file, and text manipulation facilities make it particularly
-well-suited for tasks involving quick prototyping, system utilities,
-software tools, system management tasks, database access, graphical
-programming, networking, and world wide web programming.  These strengths
-make it especially popular with system administrators and CGI script
-authors, but mathematicians, geneticists, journalists, and even managers
-also use Perl.  Maybe you should, too.
-
-This package is contains the Perl DynaLoader built as relocatable shared
-object.
