@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.7 2005/02/24 09:03:09 agc Exp $
-
-SHA1 (perl-5.6.1.tar.gz) = c718b38685f90d51a9a6b1b008de0d7d198c0744
-RMD160 (perl-5.6.1.tar.gz) = 4062e3d43e7a860197ff73ab5083ddb2e5909cde
-Size (perl-5.6.1.tar.gz) = 5983695 bytes
