@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10420 2005/06/23 23:53:06 minskim Exp $
+$NetBSD: CHANGES,v 1.10421 2005/06/24 05:56:25 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 	
@@ -2969,3 +2969,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated news/inn to 2.4.1nb3 [kristerw 2005-06-23]
 	Updated net/freewais-sf to 2.2.12nb3 [kristerw 2005-06-23]
 	Added devel/py-ZopeInterface version 3.0.1 [minskim 2005-06-23]
+	Removed lang/libperl [jlam 2005-06-24]
